feat : transporte del panel justo delante del usuario con botón de muñeca

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -3,4 +3,5 @@
   <item type="id" name="ui_example" />
   <item type="id" name="options_panel" />
   <item type="id" name="main_panel" />
+  <item type="id" name="wrist_menu_panel"/>
 </resources>
